change name of extension

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 3,
-    "name": "MCGFTGF",
+    "name": "Effortless Subject Reordering",
     "version": "1.0",
     "description": "Convenient way to fill out OE/HULM Google Forms in IIT(BHU)",
     "icons": {
